* Fixed Dictionary Loading icon alignment.

--- a/theme/css/gdc-common.css
+++ b/theme/css/gdc-common.css
@@ -1395,6 +1395,7 @@ footer a {
   margin-left: 5rem;
   display: block;
   z-index: 10000;
+  display: none;
 }
 
 .spinParticleContainer {
